[gd_scene load_steps=4 format=2]

[ext_resource path="res://menu/options/options.gd" type="Script" id=1]
[ext_resource path="res://menu/options/option_buttons.gd" type="Script" id=2]
[ext_resource path="res://menu/button.png" type="Texture" id=3]

[node name="Options" type="HBoxContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 384.0
margin_right = 1216.0
margin_bottom = 900.0
custom_constants/separation = 93
alignment = 1

[node name="OptionsBackground" type="TextureRect" parent="VBoxContainer"]
margin_top = 288.0
margin_right = 832.0
margin_bottom = 448.0
rect_min_size = Vector2( 832, 160 )
texture = ExtResource( 3 )
stretch_mode = 2

[node name="OptionButtons" type="GridContainer" parent="VBoxContainer/OptionsBackground"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -66.0
margin_right = 400.0
margin_bottom = 66.0
rect_min_size = Vector2( 800, 128 )
columns = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RenderDistanceLabel" type="Label" parent="VBoxContainer/OptionsBackground/OptionButtons"]
margin_right = 384.0
margin_bottom = 64.0
rect_min_size = Vector2( 384, 64 )
size_flags_vertical = 5
text = "Render distance: 3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RenderDistanceSlider" type="HSlider" parent="VBoxContainer/OptionsBackground/OptionButtons"]
margin_left = 388.0
margin_right = 800.0
margin_bottom = 64.0
rect_min_size = Vector2( 384, 64 )
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = 3.0
max_value = 10.0
value = 7.0

[node name="FogLabel" type="Label" parent="VBoxContainer/OptionsBackground/OptionButtons"]
margin_top = 68.0
margin_right = 384.0
margin_bottom = 132.0
rect_min_size = Vector2( 384, 64 )
size_flags_vertical = 5
text = "Fog Enabled"

[node name="FogCheckBox" type="CheckBox" parent="VBoxContainer/OptionsBackground/OptionButtons"]
margin_left = 388.0
margin_top = 68.0
margin_right = 800.0
margin_bottom = 132.0
rect_min_size = Vector2( 384, 64 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 548.0
margin_right = 832.0
margin_bottom = 612.0
alignment = 1

[node name="Back" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 224.0
margin_right = 608.0
margin_bottom = 64.0
rect_min_size = Vector2( 384, 64 )
texture_normal = ExtResource( 3 )

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/Back"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.0
margin_bottom = -18.0
text = "Back"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="value_changed" from="VBoxContainer/OptionsBackground/OptionButtons/RenderDistanceSlider" to="VBoxContainer/OptionsBackground/OptionButtons" method="_on_RenderDistanceSlider_value_changed"]
[connection signal="pressed" from="VBoxContainer/OptionsBackground/OptionButtons/FogCheckBox" to="VBoxContainer/OptionsBackground/OptionButtons" method="_on_FogCheckBox_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Back" to="." method="_on_Back_pressed"]
